<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/cofee2"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewGreating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_order"
        android:text="@string/greatin_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreating">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickChoiseDrink"
            android:checked="true"
            style="@style/radio_button"
            android:text="@string/radio_button_tea" />

        <RadioButton

            android:id="@+id/radioButtonCoffe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickChoiseDrink"
            style="@style/radio_button"
            android:text="@string/radio_button_coffe" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAditives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/text_order"
        android:text="@string/aditives_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrink" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAditives">

        <CheckBox
            android:id="@+id/checkBoxSugar"
            style="@style/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_sugar" />

        <CheckBox
            android:id="@+id/checkBoxMilk"
            style="@style/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_milk" />

        <CheckBox
            android:id="@+id/checkBoxLemon"
            style="@style/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_lemon" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewChoiseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_drink_text"
        style="@style/text_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Spinner
    android:id="@+id/spinnerTea"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:entries="@array/type_of_tea"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewChoiseType" />

    <Spinner
        android:id="@+id/spinnerCoffe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="invisible"
        android:entries="@array/type_of_coffe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoiseType" />

    <ImageView
        android:id="@+id/imageViewCreateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickToCreateOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
        app:srcCompat="@drawable/order" />


</androidx.constraintlayout.widget.ConstraintLayout>